# evac

./: .gitignore  Cargo.toml  README.md  build.rs  evac.code-workspace  nightwatch.conf.js  old.Cargo.toml  package-lock.json  rust-toolchain.toml  sdkconfig.defaults  test.json  wokwi.toml
.cargo/: config.toml
.github/: copilot-instructions.md
data/: database.json  server.json
demo/: Cargo.toml  build.rs  diagram.json  sdkconfig.defaults
demo/.cargo/: config.toml
demo/src/: application.rs  ble_scanner.rs  main.rs  scanner.rs
demo/src/ble/: advertised_data.rs  advertised_device.rs  client.rs  device.rs  error.rs  mod.rs  scan.rs  uuid.rs
diagrams/: block.puml  erd.puml  flow.puml  usecase.puml
esp32-nimble/: Cargo.toml
esp32-nimble/src/: ble_error.rs  lib.rs
esp32-nimble/src/client/: ble_advertised_data.rs
esp32-nimble/src/utilities/: mod.rs
frontend/: .editorconfig  .gitignore  .npmrc  .prettierignore  DESIGN_SYSTEM.md  README.md  eslint.config.js  index.html  nightwatch.conf.cjs  nx.json  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/apps/mvp/: index.html  package.json  project.json  tsconfig.json  vite.config.js  vitest.config.js  vitest.config.ts
frontend/apps/pow/: index.html  package.json  vite.config.js
frontend/configs/tsconfig/: app.json  base.json  lib.json  lib.vue.json
frontend/configs/vite/: lib.ts
frontend/src/: App.vue  main.js  router.js  utils.js
frontend/src/assets/: base.css  main.css
frontend/src/component/: AlarmSelect.vue  LocationSelect.vue  RoomSelect.vue
frontend/src/stores/: activityStore.js  alarmStore.js  configStore.js  dataStore.js  deviceStore.js  emailStore.js  eventStore.js  locationStore.js  mainStore.js  positionStore.js  roomStore.js  scannerStore.js
frontend/src/views/: Alarms.vue  Area.vue  Config.vue  Dashboard.vue  (+7 more)
server/: Cargo.toml  build.rs
server/src/: context.rs  email.rs  lib.rs  main.rs  server.rs  util.rs
server/src/database/: config.rs  entities.rs  mod.rs
server/src/message/: web.rs
server/src/scanner/: map.rs  mod.rs  parser.rs  scanner.rs
server/src/web/: mod.rs  operator.rs
shared/: Cargo.toml
shared/src/: global.rs  scanner.rs
test/: Cargo.toml  wokwi.toml
test/.devcontainer/: devcontainer.json
test/docs/: README.md
test/scripts/: flash.sh
test/src/: main.rs  main.rs.old
test_server/: Cargo.toml
test_server/src/: main.rs
(+44 files in other folders)
