[package]
name = "demo"
version = "0.1.0"
authors = ["Miksa <martin.miksanik@vacuumlabs.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]


[dependencies]
anyhow = "1"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51.0", features=["std", "alloc", "embassy-sync"] }
esp32-nimble = {path="../esp32-nimble"}
shared = { path = "../shared" }
rmp-serde = { version = "1.3.0"}
num_enum = { version = "0.7", default-features = false }
bitflags = { version = "2.4.1" }
bstr = { version = "1.8.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[build-dependencies]
embuild = "0.33.0"