[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
hex = {version = "0.4.3", features = ["serde"]}
rand = "0.8.5"
rust_decimal = { version = "1.35.0", features = ["serde_json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["time", "signal", "net", "sync", "macros", "tracing", "rt", "rt-multi-thread"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
warp = "0.3.7"
async-trait = "0.1.80"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9.0", features=["messagepack", "json"]}
futures = "0.3"
rmp-serde = { version = "1.3.0"}
mail-send = "0.5.1"
reqwest = "0.12.24"
md5 = "0.8.0"
sha2 = "0.10.9"
shared = { path = "../shared" }
